//ClientInfo.proto
//每次都要发的版本信息和token
syntax = "proto2";
package HttpConn;

message HttpConnSig {
  required uint32      Uin                 = 1;
  required uint32      tag2                = 2;
  required uint32      tag3                = 3;
  required uint32      SubCmd              = 4;
  required uint32      ClientVer           = 5;
  required uint32      DwClientType        = 7;
  required uint32      DwPubNo             = 8;
  required uint32      ServiceId           = 17;
  required bytes       BufSigHttpConnToken = 18;
  required uint32      tag19               = 19;
  required uint32      tag24               = 24;
  message unknowTag25 {
    required uint32 tag1 = 1;
    required uint32 tag2 = 2;
  }
  required unknowTag25 tag25               = 25;
}